// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json 1`] = `
"import { openBlock, createBlock, toDisplayString } from 'vue';

//
//
//
//

var script = {
  name: 'Entry'
};

function render(_ctx, _cache) {
  return (openBlock(), createBlock(\\"p\\", null, toDisplayString(_ctx.$t('hello')), 1 /* TEXT */))
}

function i18n(Component) {
  const options = typeof Component === 'function' ? Component.options : Component;
  options.__i18n = options.__i18n || [];
  options.__i18n.push({\\"en\\":{\\"hello\\":\\"hello!\\"},\\"ja\\":{\\"hello\\":\\"こんにちは！\\"}});
}

if (typeof i18n === 'function') i18n(script);

script.render = render;
script.__file = \\"entry.vue\\";

export default script;
"
`;

exports[`json5 1`] = `
"import { openBlock, createBlock, toDisplayString } from 'vue';

//
//
//
//

var script = {
  name: 'Entry'
};

function render(_ctx, _cache) {
  return (openBlock(), createBlock(\\"p\\", null, toDisplayString(_ctx.$t('hello')), 1 /* TEXT */))
}

function i18n(Component) {
  const options = typeof Component === 'function' ? Component.options : Component;
  options.__i18n = options.__i18n || [];
  options.__i18n.push({\\"en\\":{\\"hello\\":\\"hello!\\"},\\"ja\\":{\\"hello\\":\\"こんにちは！\\"}});
}

if (typeof i18n === 'function') i18n(script);

script.render = render;
script.__file = \\"entry.vue\\";

export default script;
"
`;

exports[`yaml 1`] = `
"import { openBlock, createBlock, toDisplayString } from 'vue';

//
//
//
//

var script = {
  name: 'Entry'
};

function render(_ctx, _cache) {
  return (openBlock(), createBlock(\\"p\\", null, toDisplayString(_ctx.$t('hello')), 1 /* TEXT */))
}

function i18n(Component) {
  const options = typeof Component === 'function' ? Component.options : Component;
  options.__i18n = options.__i18n || [];
  options.__i18n.push({
	\\"en\\": {
		\\"hello\\": \\"hello!\\"
	},
	\\"ja\\": {
		\\"hello\\": \\"こんにちは！\\"
	}
});
}

if (typeof i18n === 'function') i18n(script);

script.render = render;
script.__file = \\"entry.vue\\";

export default script;
"
`;
